welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:25: error: value unary_! is not a member of Unit
	while (!verifFin()) {
               ^